@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-20T16:30:58Z",
+  "timestamp" : "2022-10-21T01:27:55Z",
   "count_outdated" : 591,
   "uniques_outdated" : 338,
-  "count" : 630,
+  "count" : 631,
   "uniques" : 361,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
