@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 40,
   "uniques": 12,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
